# space-shooter

./: Cargo.toml
src/: app_state.rs  background.rs  camera.rs  collision_groups.rs  health.rs  main.rs  music.rs  physics_layer.rs  state.rs  systems.rs
src/asteroid/: collision.rs  components.rs  mod.rs  resources.rs  systems.rs
src/laser/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/osd/: components.rs  mod.rs  systems.rs
src/player/: collision.rs  components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/score/: mod.rs  resources.rs  systems.rs
src/star/: mod.rs  resources.rs  systems.rs
src/ui/: components.rs  mod.rs  resources.rs  systems.rs
