[package]
name = "space-shooter"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use dymamic linking during development to reduce compile times
bevy = { version = "0.14", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "multi_threaded",
  "png",
  "x11",
  "wayland",
  "dynamic_linking"
] }
bevy-inspector-egui = "0.27"
bevy_asset_loader = "0.21"
bevy_kira_audio = "0.20"
bevy_rapier2d = { version = "0.27", features = ["debug-render-2d", "simd-stable", "parallel"] }
rand = "0.9"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
