[package]
name = "space-shooter"
version = "0.1.0"
edition = "2024"

[dependencies]
# Use dymamic linking during development to reduce compile times
bevy = { version = "0.16", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "multi_threaded",
  "png",
  "x11",
  "wayland",
  "dynamic_linking"
] }
bevy-inspector-egui = "0.31"
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", branch = "bevy_main" }
bevy_kira_audio = "0.23"
avian2d = { version = "0.3", default-features = false, features = ["2d", "f32", "parry-f32", "debug-plugin"] }
rand = "0.9"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
